{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 171,
  "lineage": "deea0d9a-2e35-0ec1-82a4-10e7c0082d80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050f5eafef9f8a3f9",
            "arn": "arn:aws:ec2:us-east-1:265577504730:elastic-ip/eipalloc-050f5eafef9f8a3f9",
            "domain": "vpc",
            "id": "eipalloc-050f5eafef9f8a3f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-175-243.compute-1.amazonaws.com",
            "public_ip": "34.228.175.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "battlesnake-eip-us-east-1a",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-eip-us-east-1a",
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da71f7a1aa6f0db7",
            "arn": "arn:aws:ec2:us-east-1:265577504730:elastic-ip/eipalloc-0da71f7a1aa6f0db7",
            "domain": "vpc",
            "id": "eipalloc-0da71f7a1aa6f0db7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-23-138-95.compute-1.amazonaws.com",
            "public_ip": "52.23.138.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "battlesnake-eip-us-east-1b",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-eip-us-east-1b",
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:internet-gateway/igw-0f2aed8cdec25fcac",
            "id": "igw-0f2aed8cdec25fcac",
            "owner_id": "265577504730",
            "tags": {
              "Name": "battlesnake-igw",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-igw",
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:265577504730:loadbalancer/app/battlesnake-alb/e9d5feea3d0421f3",
            "arn_suffix": "app/battlesnake-alb/e9d5feea3d0421f3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "battlesnake-alb-1118076048.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:265577504730:loadbalancer/app/battlesnake-alb/e9d5feea3d0421f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "battlesnake-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00d55b77a89ed3ee5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0179b03fe67f9a2e6"
              },
              {
                "subnet_id": "subnet-03feb0765015d51b7"
              }
            ],
            "subnets": [
              "subnet-0179b03fe67f9a2e6",
              "subnet-03feb0765015d51b7"
            ],
            "vpc_id": "vpc-01e1448f2761784b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:265577504730:listener/app/battlesnake-alb/e9d5feea3d0421f3/df16102dd76ffc57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:265577504730:targetgroup/app-20250211024702483400000001/2935fb25e035ab38",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:265577504730:listener/app/battlesnake-alb/e9d5feea3d0421f3/df16102dd76ffc57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:265577504730:loadbalancer/app/battlesnake-alb/e9d5feea3d0421f3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:265577504730:targetgroup/app-20250211024702483400000001/2935fb25e035ab38",
            "arn_suffix": "targetgroup/app-20250211024702483400000001/2935fb25e035ab38",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:265577504730:targetgroup/app-20250211024702483400000001/2935fb25e035ab38",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:265577504730:loadbalancer/app/battlesnake-alb/e9d5feea3d0421f3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-20250211024702483400000001",
            "name_prefix": "app-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:route-table/rtb-045b0bff894fae2bb",
            "id": "rtb-045b0bff894fae2bb",
            "owner_id": "265577504730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2aed8cdec25fcac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "battlesnake-rt",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-rt",
              "env": "prod",
              "project": "battlesnake"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03666d382b5b476ee",
            "route_table_id": "rtb-045b0bff894fae2bb",
            "subnet_id": "subnet-03feb0765015d51b7"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d857c5b7c4ac62",
            "route_table_id": "rtb-045b0bff894fae2bb",
            "subnet_id": "subnet-0179b03fe67f9a2e6"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group/sg-06c45c5b2181a0788",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-06c45c5b2181a0788",
            "ingress": [],
            "name": "battlesnake-ecs-node-sg-20250211012843141500000001",
            "name_prefix": "battlesnake-ecs-node-sg-",
            "owner_id": "265577504730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group/sg-05711c7ff0eec4a49",
            "description": "Allow all traffic within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05711c7ff0eec4a49",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-task-sg-20250211022720289400000003",
            "name_prefix": "ecs-task-sg-",
            "owner_id": "265577504730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:security-group/sg-00d55b77a89ed3ee5",
            "description": "Allow all HTTP/HTTPS traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d55b77a89ed3ee5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg-20250211022720291900000005",
            "name_prefix": "http-sg-",
            "owner_id": "265577504730",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:subnet/subnet-03feb0765015d51b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03feb0765015d51b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265577504730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "battlesnake-subnet-us-east-1a",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-subnet-us-east-1a",
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:subnet/subnet-0179b03fe67f9a2e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0179b03fe67f9a2e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265577504730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "battlesnake-subnet-us-east-1b",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-subnet-us-east-1b",
              "env": "prod",
              "project": "battlesnake"
            },
            "vpc_id": "vpc-01e1448f2761784b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265577504730:vpc/vpc-01e1448f2761784b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01fea2d4dc1aa56b1",
            "default_route_table_id": "rtb-01e54cee58944f63e",
            "default_security_group_id": "sg-0244e7c5565c09bd6",
            "dhcp_options_id": "dopt-5766332d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e1448f2761784b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e54cee58944f63e",
            "owner_id": "265577504730",
            "tags": {
              "Name": "battlesnake-vpc",
              "env": "prod",
              "project": "battlesnake"
            },
            "tags_all": {
              "Name": "battlesnake-vpc",
              "env": "prod",
              "project": "battlesnake"
            }
          }
        }
      ]
    }
  ]
}